fix(frontend): fix hero alignment [wit-179] (#83)
* fixed hero alignment

* deleted empty line

* added gap back

* padding added

* fixing for dimensions

* more adjusting

* fixed the requests

--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -54,15 +54,19 @@
   display: flex;
   align-items: center;
   gap: 5em;
-  @media screen and (max-width: 1000px) {
+
+  @media screen and (max-width: 1100px) {
     flex-direction: column;
     padding: 7rem 2rem 2rem 2rem;
   }
+
+  @media screen and (min-width: 1700px) {
+    justify-content: space-between;
+  } 
 }
 
 .heroImage {
   border-radius: 100px 0px 0px 100px;
-  margin-bottom: 3em;
 }
 
 .heroText {
